fix filed under tag spacing issue

--- a/static/blog/main.css
+++ b/static/blog/main.css
@@ -74,3 +74,7 @@ h1 a:active {
 .post-tags p {
 	display:inline;
 }
+
+.post-tags h4 {
+	display:inline;
+}
